# docker-haskell

./: .gitignore  .hadolint.yaml  8.10_buster.dockerfile  8.10_slim-buster.dockerfile  9.0_buster.dockerfile  9.0_slim-buster.dockerfile  9.2_buster.dockerfile  9.2_slim-buster.dockerfile  9.4_buster.dockerfile  9.4_slim-buster.dockerfile  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.template  LICENSE  README-short.txt  README.md  cabal.project  docker-haskell.cabal  generate-stackbrew-library.sh  generate.hs  generate.sh  generate_dockerfiles.nu  install-stack.sh  stack-shasum.sh  versions.json
7.10/: Dockerfile
7.8/: Dockerfile
7.8.3/: Dockerfile
8.0/: Dockerfile
8.10/: Dockerfile
8.2/: Dockerfile
8.4/: Dockerfile
8.6/: Dockerfile
8.8/: Dockerfile
9.10/: _cabal-install.deb11.yaml  _cabal-install.deb12.yaml  bookworm.ncl  bookworm.yaml  bullseye.ncl  bullseye.yaml  slim-bookworm.ncl  slim-bookworm.yaml  slim-bullseye.ncl  slim-bullseye.yaml
9.12/: bookworm.ncl  bookworm.yaml  bullseye.ncl  bullseye.yaml  slim-bookworm.ncl  slim-bookworm.yaml  slim-bullseye.ncl  slim-bullseye.yaml
9.14/: _globals.ncl  bookworm.ncl  bullseye.ncl  slim-bookworm.ncl  slim-bullseye.ncl
9.4/: _ghc.ncl  _ghc.yaml  bullseye.ncl  bullseye.yaml  slim-bullseye.ncl  slim-bullseye.yaml
9.6/: _cabal-install.ncl  _ghc.ncl  _ghc.yaml  _globals.ncl  _globals.yaml  bullseye.yaml  slim-bullseye.yaml
9.8/: _ghc.ncl  _ghc.yaml  bullseye.ncl  bullseye.yaml  slim-bullseye.ncl  slim-bullseye.yaml
generator/: .gitignore  CHANGELOG.md  generator.cabal  stack.yaml
script/: build  (+1 more)
(+100 files in other folders)
